--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-*.class# Mobile Tools for Java (J2ME).mtj.tmp/# Package Files #*.jar*.war*.ear#Gradle temporary filestarget/#Eclipse files**/.project**/.classpath**/.settings/blog/bin/**/.tern-project#IntelliJ files**/*.iml**/.idea**/.gradle# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xmlhs_err_pid*
+.gradle
+*.sw?
+.#*
+*#
+*~
+/build
+/code
+.classpath
+.project
+.settings
+.metadata
+.factorypath
+.recommenders
+bin
+build
+lib/
+target
+.factorypath
+.springBeans
+interpolated*.xml
+dependency-reduced-pom.xml
+build.log
+_site/
+.*.md.html
+manifest.yml
+MANIFEST.MF
+settings.xml
+activemq-data
+overridedb.*
+*.iml
+*.ipr
+*.iws
+.idea
+*.jar
+.DS_Store
+.factorypath
+dump.rdb
+transaction-logs
