--- a/docker-compose-docker-machine.yml
+++ b/docker-compose-docker-machine.yml
@@ -14,3 +14,5 @@ services:
      - mongo
     depends_on:
       - "mongo"
+    environment:
+         SPRING_DATA_MONGODB_URI: mongodb://${DOCKER_HOST_IP}/userregistration
